modified paths to put it on the internet.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Dicee</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="docs/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster" rel="stylesheet">
 
   </head>
@@ -30,5 +30,5 @@
 
   </body>
 
-  <script src="app.js"></script>
+  <script src="docs/app.js"></script>
 </html>
